Changelog
=========


1.1.5 (unreleased)
------------------

- Nothing changed yet.


1.1.4 (2012-06-13)
------------------

- Translate workflow transitions
  [mathias.leimgruber]


1.1.3 (2012-05-14)
------------------

- Fix UnicodeDecodeError while sending user notifications.
  [mathias.leimgruber]


1.1.2 (2012-05-10)
------------------

- Found a second getfullname method -.- fix this one too.
  [mathias.leimgruber]


1.1.1 (2012-05-09)
------------------

- Small usability customizations.
  This package needs refactoring.
  [mathias.leimgruber]


1.1 (2012-03-12)
----------------

- Added german translation for deactivated survey.
  [Julian Infanger]


1.0 (2012-03-05)
----------------

- Fixed Mailsubject.
  [ttschanz]

- Added getMeeting_type for ftw.workspace / tabbed view compatibility
  [jbaumann]

- added comments and docstrings
  [mathias.leimgruber]

- added german translations
  [mathias.leimgruber]

- remove some unused code
  [mathias.leimgruber]

- code review and optimizations
  [mathias.leimgruber]

- copy from izug.poodle version 1.0c3
  [mathias.leimgruber]