@@ -5,7 +5,8 @@ Changelog
 1.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Updated workfow: do not allow Member to see all poodles.
+  [Julian Infanger]
 
 
 1.1.4 (2012-06-13)
